@@ -54,6 +54,7 @@ Version 1.9.9+svn:
    * Fixed preload event not being fired (bug #18695)
    * Make the create unit dialog give the created unit a valid gender for
      that unit type. (bug #18704)
+   * Add --language/-L commandline option to set the language for that session
 
 Version 1.9.9:
  * AI:
